Some experiments with Spring Boot devtools

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+#spring.devtools.restart.enabled=false
+server.port=8888
+
+### configuration class -> parameter
+springit.welcome-msg=Welcome from Dobron
+
+### active profile
+spring.profiles.active=prod
+
+### logging section
+#logging.level.root=TRACE
+logging.level.com.miro.springit=DEBUG
+
+### actuator section
+info.applicaton.name=Spring IT
+management.endpoint.health.show_details=ALWAYS
+management.endpoints.web.exposure.include=*
+
+###
 
