--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<version>2.2.4.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
