--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,16 @@ info.applicaton.name=Spring IT
 management.endpoint.health.show_details=ALWAYS
 management.endpoints.web.exposure.include=*
 
-###
+### H2 database
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+#datasource (default to testdb)
+spring.datasource.name=springit
+# sa | empty password
+#spring.datasource.username=
+#spring.datasource.password=
+
+#JPA & Hibernate
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 
