--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ management.endpoint.health.show_details=ALWAYS
 management.endpoints.web.exposure.include=*
 
 ### H2 database
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 #datasource (default to testdb)
-spring.datasource.name=springit
+#spring.datasource.name=springit
 # sa | empty password
 #spring.datasource.username=
 #spring.datasource.password=
@@ -28,4 +28,20 @@ spring.datasource.name=springit
 #JPA & Hibernate
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+#mySQL
+#DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto"
+#property. Defaults to "create-drop" when using an embedded database and no
+#schema manager was detected. Otherwise, defaults to "none".
+# create | create-drop | none | update | validate
+#spring.jpa.hibernate.ddl-auto=
+
+
+# mysql settings
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/springit?serverTimezone=UTC&useLegacyDatetimeCode=false?useSSL=false
+spring.datasource.username=hbstudent
+spring.datasource.password=hbstudent
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
 
